問い合わせフォームの送信ボタンを作成

--- a/responsive.css
+++ b/responsive.css
@@ -183,15 +183,16 @@
     }
 
     #contact input {
-        height: 40px;
         width: 100%;
-        margin-bottom: 20px;
-        border: 1px solid gray;
     }
 }
 
 @media (max-width: 350px) {
     #contact form {
         padding: 10px;
+    }
+    
+    #contact #submit-btn {
+        width: 100%;
     }
 }
