--- a/style.css
+++ b/style.css
@@ -405,6 +405,27 @@ h1 span:nth-child(8) {
     border-radius: 5px;
 }
 
+#contact #submit-btn-wrapper {
+    text-align: center;
+}
+
+#contact #submit-btn {
+    margin-top: 20px;
+    height: 50px;
+    width: 200px;
+    background-color: #094E6F;
+    color: white;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+#contact #submit-btn:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: #04212e;
+    color: rgb(207, 207, 207);
+}
+
 /*****************footer*****************/
 
 footer {
